--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
+:root {
+  --card-bg-color: rgb(255, 255, 255);
+  --primary-color: rgb(23, 23, 23);
+  --secondary-color: rgb(82, 82, 82);
+}
 body {
+  background: linear-gradient(rgb(249, 250, 251), rgb(210, 214, 219));
   margin: 0;
   font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -7,12 +13,53 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  display: flex;
+  line-height: 1.5;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-color);
+  padding: 16px;
 }
 
 * {
+  margin: 0;
   box-sizing: border-box;
 }
+.testimonial-card {
+  background-color: var(--card-bg-color);
+  max-width: 320px;
+  padding: 20px;
+  border-radius: 10px;
+}
+.testimonial-card p {
+  font-size: 0.95rem;
+}
 
+.testimonial-card p,
+.author-username {
+  color: var(--secondary-color);
+}
+.author-image {
+  border-radius: 50%;
+}
+.author-info {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+.author-info figcaption {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+.author-name {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+.author-username {
+  font-size: 0.85rem;
+}
 .credits {
   color: #777;
   position: fixed;
@@ -25,4 +72,9 @@ body {
 .credits a {
   color: #000;
   font-weight: bold;
+}
+@media only screen and (min-width: 375px) {
+  body {
+    padding: 32px;
+  }
 }
